Fixed horizontal scrollbar

--- a/web/style-guide/css/sg-style.css
+++ b/web/style-guide/css/sg-style.css
@@ -7,6 +7,10 @@
 
 ---------------------------------------------------------------------------- */
 
+html {
+  font-size: 16px !important;
+}
+
 /* -------------------------------------------------------------------------
  Layout
 ---------------------------------------------------------------------------- */
